extra/tools/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rzr-wip
  name: rzr-wip
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: rzr-wip
  type: NodePort
status:
  loadBalancer: {}
