extra/tools/kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rzr-wip
spec:
  rules:
  - host: rzr-wip.localhost
    http:
      paths:
      - backend:
          serviceName: rzr-wip
          servicePort: 8888
